--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11653,6 +11653,10 @@ video {
   max-height: 100vh;
 }
 
+.max-w-175 {
+  max-width: 43.75rem;
+}
+
 .max-w-none {
   max-width: none;
 }
@@ -32302,6 +32306,10 @@ video {
     max-height: 100vh;
   }
 
+  .sm\:max-w-175 {
+    max-width: 43.75rem;
+  }
+
   .sm\:max-w-none {
     max-width: none;
   }
@@ -52884,6 +52892,10 @@ video {
 
   .md\:max-h-screen {
     max-height: 100vh;
+  }
+
+  .md\:max-w-175 {
+    max-width: 43.75rem;
   }
 
   .md\:max-w-none {
@@ -73470,6 +73482,10 @@ video {
     max-height: 100vh;
   }
 
+  .lg\:max-w-175 {
+    max-width: 43.75rem;
+  }
+
   .lg\:max-w-none {
     max-width: none;
   }
@@ -94052,6 +94068,10 @@ video {
 
   .xl\:max-h-screen {
     max-height: 100vh;
+  }
+
+  .xl\:max-w-175 {
+    max-width: 43.75rem;
   }
 
   .xl\:max-w-none {
